crates/harnx/tests/it/snapshots/it__tmux_e2e__mutation_snap3_after_rewind.snap
---
source: crates/harnx/tests/it/tmux_e2e.rs
expression: s
---
Welcome to harnx [VERSION]  *  Type .help for commands, Tab to complete.
> first message

FIRST_RESPONSE_SENTINEL

🤖 mutation-test-agent ▸ mock-llm:test ▸ mutation-e2e-session
↩ Rewound session to entry 2.






























* 🤖 mutation-test-agent ▸ mock-llm:test ▸ mutation-e2e-session   Context: 10(0%)


# snap: 3-after-rewind
