crates/harnx/tests/it/snapshots/it__tmux_e2e__retry_succeed_after_retry_shows_warning_then_response.snap
---
source: crates/harnx/tests/it/tmux_e2e.rs
expression: normalized
---
Welcome to harnx [VERSION]  *  Type .help for commands, Tab to complete.
retry-agent
🤖 retry-agent ▸ mock-llm:primary ▸ [SID]
> hello

⚠ Retryable error (status 500, Temporary failure (type: server_error)), attempt 1/3. Retrying in 10ms...
RETRY_SUCCESS_RESPONSE: Hello from the retried model!

🤖 retry-agent ▸ mock-llm:primary ▸ [SID]  💬 [N](0%)






































* 🤖 retry-agent ▸ mock-llm:primary ▸ [SID]
